examples/misc/error/compilation/eval_zero-div_mod.bfml
let _ = 123 mod 0

let main = []